; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/ble_spp_client/main/extr_spp_client_demo.c_free_gattc_srv_db.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/ble_spp_client/main/extr_spp_client_demo.c_free_gattc_srv_db.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@is_connect = common dso_local global i32 0, align 4
@spp_gattc_if = common dso_local global i32 0, align 4
@spp_conn_id = common dso_local global i64 0, align 8
@spp_mtu_size = common dso_local global i32 0, align 4
@cmd = common dso_local global i64 0, align 8
@spp_srv_start_handle = common dso_local global i64 0, align 8
@spp_srv_end_handle = common dso_local global i64 0, align 8
@notify_value_p = common dso_local global i32* null, align 8
@notify_value_offset = common dso_local global i64 0, align 8
@notify_value_count = common dso_local global i64 0, align 8
@db = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @free_gattc_srv_db to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_gattc_srv_db() #0 {
  store i32 0, i32* @is_connect, align 4
  store i32 255, i32* @spp_gattc_if, align 4
  store i64 0, i64* @spp_conn_id, align 8
  store i32 23, i32* @spp_mtu_size, align 4
  store i64 0, i64* @cmd, align 8
  store i64 0, i64* @spp_srv_start_handle, align 8
  store i64 0, i64* @spp_srv_end_handle, align 8
  store i32* null, i32** @notify_value_p, align 8
  store i64 0, i64* @notify_value_offset, align 8
  store i64 0, i64* @notify_value_count, align 8
  %1 = load i32*, i32** @db, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32*, i32** @db, align 8
  %5 = call i32 @free(i32* %4)
  store i32* null, i32** @db, align 8
  br label %6

6:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
